Bustage fix, try again. (bug 511797)