suite/profile/migration/src/nsThunderbirdProfileMigrator.cpp
@@ -39,7 +39,6 @@
 #include "nsCRT.h"
 #include "nsDirectoryServiceDefs.h"
 #include "nsIObserverService.h"
-#include "nsIPasswordManagerInternal.h"
 #include "nsIPrefLocalizedString.h"
 #include "nsIPrefService.h"
 #include "nsIServiceManager.h"
